<resources>
    <string name="app_name">CleanArchitectureNoteApp</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log in</string>

    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>

    <string name="name_hint">Write 14 characters</string>
    <string name="email_hint">Write your email</string>
    <string name="phone_hint">Write 11 numbers</string>
    <string name="password_hint">Write 8 characters at least</string>
    <string name="confirm_hint">Write password again</string>

    <string name="have_account">have an account ?</string>
    <string name="no_account">Don\'t have an account ?</string>
    <string name="forgot_pass">Forgot the password ?</string>

    <string name="search_hint">Search for fav food....</string>

</resources>